Aligned all the read buttons from issue-7 page

--- a/styles/slaice.css
+++ b/styles/slaice.css
@@ -194,6 +194,7 @@ article {
 
 .card {
   margin: 0.5em;
+  padding-bottom: 10%;
   box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
   border: none;
 }
@@ -201,7 +202,8 @@ article {
 #latest-issue-banner {
   display: inline-block;
   margin: 0 10%;
-  padding: 5% 10%;
+  margin-bottom: 7%;
+  padding: 3% 8%;
   background-color: #e1e1e1;
   border-radius: 5px;
 }
@@ -221,4 +223,11 @@ a {
 
 .breadcrumb a:hover {
   text-decoration: underline;
+}
+
+.read-btn {
+  display: inline;
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 7%;
 }
